tests/baselines/reference/externModule.errors.txt
==== tests/cases/compiler/externModule.ts (5 errors) ====
    declare module {
                   ~
!!! externModule.ts(1,16): error TS1003: Identifier expected.
        export class XDate {
            public getDay():number;
            public getXDate():number;
            // etc.
    
            // Called as a function
            // Not supported anymore? public (): string;
            
            // Called as a constructor
            constructor(year: number, month: number);
            constructor(year: number, month: number, date: number);
            constructor(year: number, month: number, date: number, hours: number);
            constructor(year: number, month: number, date: number, hours: number, minutes: number);
            constructor(year: number, month: number, date: number, hours: number, minutes: number, seconds: number);
            constructor(year: number, month: number, date: number, hours: number, minutes: number, seconds: number, ms: number);
            constructor(value: number);
            constructor();
            
            static parse(string: string): number;
            static UTC(year: number, month: number): number;
            static UTC(year: number, month: number, date: number): number;
            static UTC(year: number, month: number, date: number, hours: number): number;
            static UTC(year: number, month: number, date: number, hours: number, minutes: number): number;
            static UTC(year: number, month: number, date: number, hours: number, minutes: number, seconds: number): number;
            static UTC(year: number, month: number, date: number, hours: number, minutes: number, seconds: number,
                     ms: number): number;
            static now(): number;
        }
    }
    
    var d=new XDate();
              ~~~~~
!!! externModule.ts(32,11): error TS2095: Could not find symbol 'XDate'.
    d.getDay();
    d=new XDate(1978,2);
          ~~~~~
!!! externModule.ts(34,7): error TS2095: Could not find symbol 'XDate'.
    d.getXDate();
    var n=XDate.parse("3/2/2004");
          ~~~~~
!!! externModule.ts(36,7): error TS2095: Could not find symbol 'XDate'.
    n=XDate.UTC(1964,2,1);
      ~~~~~
!!! externModule.ts(37,3): error TS2095: Could not find symbol 'XDate'.
    
    